# wikdoc

./: .gitignore  LICENSE  README.md  README_Wikdoc.md  pyproject.toml
examples/: usage.md
wikdoc/: __init__.py  __main__.py  cli.py  cli_actions.py  config.py  ollama_client.py  packs.py
wikdoc/chunking/: base.py  fallback.py
wikdoc/docsgen/: generate.py
wikdoc/embeddings/: base.py  ollama.py  sbert.py
wikdoc/ingest/: ignore_rules.py  loaders.py  scanner.py
wikdoc/integrations/: openwebui.py
wikdoc/rag/: answer.py  prompt.py  retrieve.py
wikdoc/server/: rag_api.py
wikdoc/store/: __init__.py  layout.py  workspace.py
wikdoc/ui/: __init__.py  menu.py  webui.py
wikdoc/utils/: __init__.py
wikdoc/vectordb/: base.py  sqlite_numpy.py
